# woodoku-solver-rl

./: .gitignore  README.md  graph.go  main.go  main_test.go  pyproject.toml
go-solver/: PC_vs_game.go  go.mod  main.go  main_test.go
src/woodoku/: __main__.py  cli.py
src/woodoku/agent/: eval.py  planner.py  policy.py  train.py
src/woodoku/automation/: mouse.py
src/woodoku/bot/: logger.py  loop.py  rl_screen.py
src/woodoku/capture/: screen.py
src/woodoku/core/: rules.py  shapes.py  types.py
src/woodoku/env/: action.py  action_masking.py  observation.py  piece_generator.py  reward.py  woodoku_env.py
src/woodoku/recognition/: cv_classifier.py  geometry.py  masks.py
src/woodoku/solver/: go_bridge.py  protocol.py
src/woodoku/tools/: calibrate.py  crosscheck_simulator.py  infer_sim.py  run_bot.py  train_agent.py
tests/: test_env.py  test_obs_v2_and_planner.py  test_reward.py  test_rules.py
vision/: automator.py  calibrate.py  capture.py  detector.py  logger.py  main.py  requirements.txt  shapes.py  solver.py
